unified_tests/types/generic_type_annotation_argument_arity_mismatch/expect/build.text.stderr
lib.copp:6:10: error: type 'Box' expects 1 type arguments, got 0
      box: Box := Box[int64] { value: 1 }
           ^
